Added Steps to the recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
     <!-- define h1 -->
     <h1>Odin Recipes</h1>
-    <a href="recipes/scalloped souffle.html">Scalloped Pineapple Souffle</a>
+    <ul>
+      <li><a href="recipes/scalloped souffle.html">Scalloped Pineapple Souffle</a></li>
+      <li><a href="recipes/argula_salad.html">Argula Salad with Stone Fruit</a></li>
+      <li></li>
+
+        </ul>
+    
 </body>
 </html>
