--- a/recipes/scalloped souffle.html
+++ b/recipes/scalloped souffle.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Scalloped Pineapple Souffle</h1>
-    <img src="https://www.allrecipes.com/thmb/SZLcjtfMMVgD6gXQAx51dE-5ucw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/214025scalloped-pineapple-souffleKim4x3-99a0748a5edb4963b98fd6b6c73cba61.jpg" alt="This is a wonderful pineapple dish to be served with ham. It is a favorite at Easter in my family. The egg whites add a touch of lightness to it." style="width: 210px;height: 180px;">
+    <img src="https://www.allrecipes.com/thmb/SZLcjtfMMVgD6gXQAx51dE-5ucw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/214025scalloped-pineapple-souffleKim4x3-99a0748a5edb4963b98fd6b6c73cba61.jpg" alt="Scalloped Pineapple Souffle" style="width: 210px;height: 180px;">
     <h2>Description</h2>
       <p>This is a wonderful pineapple dish to be served with ham. It is a favorite at Easter in my family. The egg whites add a touch of lightness to it.</p>
       
@@ -19,6 +19,15 @@
         <li>½ cup milk</li>
         <li>1 (15 ounce) can crushed pineapple, drained</li>
         <li>3 cups cubed bread</li>
-      </ul> 
+      </ul>
+    <h2>Steps</h2>
+      <ol>
+        <li>Preheat an oven to 350 degrees F (175 degrees C).</li>
+        <li>Beat egg whites until foamy in a large glass or metal mixing bowl until stiff peaks form. Lift your beater or whisk straight up: the egg whites should form a sharp peak that holds its shape.</li>
+        <li>Beat the egg yolks, sugar, butter, and milk together in a large bowl. Stir in the pineapple and bread. Lightly fold egg whites into the pineapple mixture, then spread the mixture into a large baking dish.</li>
+        <li>Bake in the preheated oven until golden brown, 35 to 45 minutes.</li>
+
+      </ol>    
+       
     </body>
 </html>
