--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/scalloped souffle.html">Scalloped Pineapple Souffle</a></li>
-      <li><a href="recipes/argula_salad.html">Argula Salad with Stone Fruit</a></li>
+      <li><a href="recipes/arugula_salad.html">Argula Salad with Stone Fruit</a></li>
       <li></li>
 
         </ul>
