--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="recipes/scalloped souffle.html">Scalloped Pineapple Souffle</a></li>
       <li><a href="recipes/arugula_salad.html">Argula Salad with Stone Fruit</a></li>
-      <li><a href="recipes/churro_toffee.html"></a></li>
+      <li><a href="recipes/churro_toffee.html">Churro Toffee</a></li>
 
         </ul>
     
